mapa mas falta ajeitar

--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -144,7 +144,7 @@
             </span>
         </label>
         <input type="text" class="form-control" style="width: 75%" readonly>
-        <button type="button" data-toggle="modal" data-target="#modalimage" class="btn btn-primary" style="width: 25%" ></span> Ver imagem</button>
+        <button type="button" data-toggle="modal" data-target="#modalimage" class="btn btn-primary" style="width: 25%"></span> Ver imagem</button>
       </div>
     </div>
 
@@ -179,3 +179,5 @@
 
   <br><br>
 </div>
+
+<div class="naoimprimivel" id="map-canvas" style="border: 2px solid #3872ac; height: 300px; width: 100%; margin: 0px; padding: 0px"></div>
