--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdgm0Ne5NjhhAR22WCGTkiSjnH7DmJ_cg&libraries=geometry,places&ext=.js" ></script>
     <%= javascript_include_tag 'application' %>
   </head>
 
