--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -69,7 +69,7 @@
 </div>
 <div class="form-inline"> 
   <label for="qr"> <h4>Qrcode</h4> </label>
-  <button type="button" class="btn btn-primary" style="width:auto"><span class="	glyphicon glyphicon-qrcode"style="width:auto"></span> Gerar Qrcode </button> 
+  <button type="button" class="btn btn-primary btn-responsive" style="width:auto"><span class="	glyphicon glyphicon-qrcode"style="width:auto"></span> Gerar Qrcode </button> 
   <input class="form-control" type="text" name="qr" ng-model="vm.QR" required style="width:60%" >   
   <div role="alert">
     <span class="error" ng-show="vm.form.qr.$dirty && vm.form.qr.$error.required">
@@ -79,7 +79,7 @@
 <div class="form-inline"> 
   <label for="qr"> <h4>Imagem</h4> </label>
   <input class="form-control" type="text" name="imagem" ng-model="vm.Imagem" required style="width:55%" >
-  <button type="button" class="btn btn-primary" style="width:auto"><span class="glyphicon glyphicon-camera"></span> Escolher Imagem </button> 
+  <button type="button" class="btn btn-primary btn-responsive" style="width:auto"><span class="glyphicon glyphicon-camera"></span> Escolher Imagem </button> 
   <div role="alert">
     <span class="error" ng-show="vm.form.imagem.$dirty && vm.form.imagem.$error.required">
         (Campo obrigatório)</span>
