--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,10 +11,11 @@
  * It is generally better to create a new file per style scope.
  *
 /*
+ *= require_self
+ *= require_tree .
+ *= require bootstrap_and_overrides
  */
-// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
-@import "bootstrap-sprockets";
-@import "bootstrap";
+
 
 tr{
     width: 100% !important;
