--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,12 +39,12 @@ tbody>tr:first-child{
 
 #map {
     border: 2px solid #3872ac;
-    height: 300px;
+    height: 70vh;
     width: 25%;                              /**/
     margin: 0px;
     padding: 0px;
     position: absolute;
-    top: 260%;
+    top: 255vh;
     right: 0px; 
 }
 
