--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -38,7 +38,7 @@
         <div class="modal-body">
           <div>
 
-            <img ng-src="{{vm.imagem}}" width="300" height="300">
+            <img ng-src="{{vm.imagem}}" width="100%" height="100%">
 
           </div>
         </div>
