--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -169,7 +169,7 @@
       </div>
     </div>
     <br>
-    <button class="btn btn-info" ng-click="vm.cadastrarEvento()" ng-disabled="vm.botao" style="background-color:#007db7"><span class="	glyphicon glyphicon-ok"></span> OK</button>
+    <button class="btn btn-info btn-responsive" ng-click="vm.cadastrarEvento()" ng-disabled="vm.botao" style="background-color:#007db7"><span class="	glyphicon glyphicon-ok"></span> OK</button>
 
   </form>
 
