--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,11 +11,9 @@
  * It is generally better to create a new file per style scope.
  *
 /*
- *= require_self
- *= require_tree .
- *= require bootstrap_and_overrides
  */
-
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 tr{
     width: 100% !important;
