Container ajustado no listUser

--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -19,7 +19,7 @@
     </form>
   </div>
 </div>
-<div class="container.responsive">
+<div class="container">
   <h2>Resultado</h2>
   <p>Informações :</p>
   <table class="table" fixed-header table-height="100px">
@@ -90,5 +90,4 @@
     </tbody>
   </table>
 
-</div>
 </div>
