imagem evento e informaçoes

--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -38,7 +38,7 @@
         <div class="modal-body">
           <div>
 
-            <img ng-src="{{vm.imagem}}" width="100%" height="100%">
+            <img ng-src="{{vm.imagem.url}}" width="100%" height="100%" ng-click="vm.logzin()">
 
           </div>
         </div>
