--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,5 +1,5 @@
 <body ng-app="pdApp" 'no-repeat center center fixed' 'background-size':'10%' style="background-color:White; overflow-x: hidden ">
- <link rel="shortcut icon" type="image/x-icon" href="/home/nexti/Documentos/git/Ponto-Dinamico/app/assets/images/favicon.ico" />
+ <link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico" />
  
   <span ng-include="'views/nav/nav.html'"></span>
   <br>
