--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -13,7 +13,7 @@
           <label for="nome">
             <h4>Nome</h4>
           </label>
-          <input disabled class="form-control" name="nome" type="text" ng-model="vm.info.nome"> -
+          <input disabled class="form-control" name="nome" type="text" ng-model="vm.info.nome">
           <br>
 
           <label for="tipo">
