--- a/app/assets/javascripts/views/editarEvento/editEvento.html
+++ b/app/assets/javascripts/views/editarEvento/editEvento.html
@@ -95,7 +95,7 @@
     <label for="local">
       <h4>Local</h4>
     </label>
-    <textarea class="form-control" name="local" ng-model="vm.evento.local"></textarea>
+    <textarea class="form-control" name="local" ng-model="vm.evento.lugar"></textarea>
     <br>
 
     <label for="desc">
