--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -49,7 +49,7 @@
           <label for="local">
             <h4>Local</h4>
           </label>
-          <textarea disabled class="form-control" name="local" ng-model="vm.info.local"></textarea>
+          <textarea disabled class="form-control" name="local" ng-model="vm.info.lugar"></textarea>
           <br>
 
           <label for="desc">
