--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -26,32 +26,6 @@
   </div>
 </div>
 
-<div class="naoimprimivel">
-  <div class="modal fade" id="modalimage" role="dialog" aria-labelledby="modalimageLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h4 class="modal-title" id="modalimageLabel" ng-click="vm.logzin()">Imagem</h4>
-        </div>
-        <div class="modal-body">
-          <div>
-
-            <img ng-src="{{vm.imagem.url}}" width="100%" height="100%" ng-click="vm.logzin()">
-
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
 <div class="container naoimprimivel" style="position:relative;transform: translate(0%, 0%); width:50%;top:0%;background-color:#fafafa">
   <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação" style="position:relative;transform: translate(35%, 0%)">
 
@@ -171,15 +145,10 @@
         <label class="input-group-btn" style="width: 20%">
           <span class="btn btn-primary">
             <span class="glyphicon glyphicon-camera"></span> Escolher Imagem
-            <!--
-            <input type="file" name="img" ng-model="vm.imagem" required accept="image/*" style="display: none !important;" app-filereader>
-            -->
-            <input type="file" name="img" nv-file-select uploader="vm.uploader" ng-model="vm.imagem" accept="image/*" style="display: none !important;">
+            <input type="file" name="img" nv-file-select uploader="vm.uploader" accept="image/*" style="display: none !important;">
           </span>
         </label>
-        <input type="text" class="form-control" style="width: 75%" readonly>
-        <button type="button" data-toggle="modal" data-target="#modalimage" class="btn btn-primary btn-responsive" style="width: 25%">
-          Ver imagem</button>
+        <input type="text" class="form-control" style="width: 75%" readonly placeholder="Nenhuma escolhida" >
       </div>
     </div>
 
@@ -217,11 +186,9 @@
 
   </form>
 
-
-
   <br>
   <br>
 </div>
 
-<input id="pac-input" class="controls" type="text" placeholder="Busca">
-<div class="naoimprimivel" id="map"></div>
+<input ng-show="vm.mapLoad" id="pac-input" class="controls" type="text" placeholder="Busca">
+<div ng-show="vm.mapLoad" class="naoimprimivel" id="map"></div>
