--- a/app/assets/javascripts/views/editarEvento/editEvento.html
+++ b/app/assets/javascripts/views/editarEvento/editEvento.html
@@ -25,31 +25,6 @@
   </div>
 </div>
 
-<div class="naoimprimivel">
-  <div class="modal fade" id="modalimage" role="dialog" aria-labelledby="modalimageLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h4 class="modal-title" id="modalimageLabel">Imagem</h4>
-        </div>
-        <div class="modal-body">
-          <div>
-
-            <img ng-src="{{vm.evento.imagem.url}}" width="100%" height="100%">
-
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 <div class="container" style="position:relative;transform: translate(0%, 5%); width:50%;top:0%;background-color:#fafafa">
   <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação" style="position:relative;transform: translate(35%, 0%)">
 
@@ -126,12 +101,10 @@
         <label class="input-group-btn" style="width: 20%">
           <span class="btn btn-primary">
             <span class="glyphicon glyphicon-camera"></span> Escolher Imagem
-            <input type="file" name="img" ng-model="vm.evento.imagem" accept="image/*" style="display: none !important;" app-filereader>
+            <input type="file" name="img" nv-file-select uploader="vm.uploader" accept="image/*" style="display: none !important;">
           </span>
         </label>
-        <input type="text" class="form-control" style="width: 75%" readonly>
-        <button type="button" data-toggle="modal" data-target="#modalimage" class="btn btn-primary" style="width: 25%">
-          Ver imagem</button>
+        <input type="text" class="form-control" style="width: 75%" readonly placeholder="Não será mudada caso não escolha uma nova">
       </div>
     </div>
 
