--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -25,7 +25,7 @@
     <div class="col-sm-6">
       <div class="list-group" style="position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
         <li class="list-group-item list-group-item-info" style="font-size:150%;font-family:Ubuntu;color:Black">Relatórios</li>
-        <a href="#!/listaUser/" class="list-group-item" style="font-size:120%;font-family:Ubuntu;color:Black">Relatório por usuário</a>
+        <a href="#!/listaUser" class="list-group-item" style="font-size:120%;font-family:Ubuntu;color:Black">Relatório por usuário</a>
         <a href="#!/listaEvento/" class="list-group-item" style="font-size:120%;font-family:Ubuntu;color:Black">Relatório por eventos</a>
       </div>
     </div>
