--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -47,7 +47,7 @@ p, ol, ul, td {
                     <li class="dropdown">
                         <a href class="dropdown-toggle" data-toggle="dropdown" style="color:white">Relatório <span class="caret"></span></a>
                         <ul class="dropdown-menu" style="background-color:#007db7">
-                            <li><a  href="#!/listaUser/" >Usuários</a></li>
+                            <li><a  href="#!/listaUser" >Usuários</a></li>
                             <li><a href="#!/listaEvento/" >Eventos</a></li>
 
                         </ul>
