navegaçao por estado e nomes

--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -70,7 +70,7 @@
   <table class="table" fixed-header table-height="100px">
     <thead>
       <tr class="info">
-        <th>NúmeroM</th>
+        <th>Matrícula </th>
         <th>Nome</th>
         <th> </th>
         <th> </th>
@@ -105,7 +105,7 @@
   <table class="table" fixed-header table-height="100px">
     <thead>
       <tr class="info">
-        <th>nome</th>
+        <th>Nome</th>
         <th>Data Início</th>
         <th>Data Fim</th>
         <th> </th>
