urls com / no final

--- a/app/assets/javascripts/views/login/login.html
+++ b/app/assets/javascripts/views/login/login.html
@@ -35,7 +35,7 @@
 							Senha curta</span>
 							</div>
 
-							<a href="#" class="ls-login-forgot">Esqueci minha senha</a>
+							<a href class="ls-login-forgot">Esqueci minha senha</a>
 
 							<div style="text-align-last: right">
 								<button class="btn btn-primary" ng-click="vm.logar()" style="background-color:#007db7">Entrar</button>
