meio tronxo por causa da modulo de enviar imagem

--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -109,7 +109,7 @@
   <table class="table" fixed-header table-height="100px">
     <thead>
       <tr class="info">
-        <th>Data</th>
+        <th>Data de início</th>
         <th>Nome do evento</th>
         <th> </th>
         <th> </th>
