falta por titulo nas tabelas

--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -45,30 +45,30 @@
                         <a href="#!/home" style="background-color:white;color:blue">Inicio</a>
                     </li>
                     <li class="dropdown">
-                        <a href class="dropdown-toggle" data-toggle="dropdown" style="color:white">Cadastro
+                        <a href class="dropdown-toggle" data-toggle="dropdown" style="color:white">Eventos
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" style="background-color:#007db7">
                             <li>
-                                <a href="#!/cadastrarUser">Usuário</a>
+                                <a href="#!/cadastrarEvento">Cadastrar</a>
                             </li>
                             <li>
-                                <a href="#!/cadastrarEvento">Evento</a>
+                                <a href="#!/listaEvento">Relatório</a>
                             </li>
+
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href class="dropdown-toggle" data-toggle="dropdown" style="color:white">Relatório
+                        <a href class="dropdown-toggle" data-toggle="dropdown" style="color:white">Usuários
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" style="background-color:#007db7">
                             <li>
-                                <a href="#!/listaUser">Usuários</a>
+                                <a href="#!/cadastrarUser">Cadastrar</a>
                             </li>
                             <li>
-                                <a href="#!/listaEvento">Eventos</a>
+                                <a href="#!/listaUser">Relatório</a>
                             </li>
-
                         </ul>
                     </li>
 
