--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -146,8 +146,8 @@
         </div>
         <div class="modal-body">
 
-          <div ng-if="vm.pontos!=null">
-            <h2>Pontos:</h2>
+          <div ng-show="vm.pontos!=null">
+            <h2>Pontos: {{vm.usu_nome}}</h2>
             <table class="table" fixed-header table-height="200px">
               <thead>
                 <tr class="info">
@@ -160,10 +160,14 @@
 
               <tbody>
                 <tr class="active" ng-repeat="ponto in vm.pontos">
-                  <td> {{ponto.data | date:"dd/MM/yyyy"}}</td>
-                  <td> {{ponto.hora_inicio}}</td>
-                  <td> {{ponto.hora_fim}}</td>
-                  <td> {{ponto.mensagem}}</td>
+                  <td ng-show="ponto.data!=undefined && ponto.data!=null"> {{ponto.data | date:"dd/MM/yyyy"}}</td>
+                  <td ng-show="ponto.data==undefined && ponto.data==null"> </td>
+                  <td ng-show="ponto.hora_inicio!=undefined && ponto.hora_inicio!=null"> {{ponto.hora_inicio}}</td>
+                  <td ng-show="ponto.hora_inicio==undefined && ponto.hora_inicio==null"> </td>
+                  <td ng-show="ponto.hora_fim!=undefined && ponto.hora_fim!=null"> {{ponto.hora_fim}}</td>
+                  <td ng-show="ponto.hora_fim==undefined && ponto.hora_fim==null"> </td>
+                  <td ng-show="ponto.mensagem!=undefined && ponto.mensagem!=null"> {{ponto.mensagem}}</td>
+                  <td ng-show="ponto.mensagem==undefined && ponto.mensagem==null"> </td>
                 </tr>
               </tbody>
             </table>
