consertando padrao ctrl c ctrl v de edit evento

--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -148,16 +148,30 @@
       <thead>
         <tr class="info">
           <th>
-            Inscritos: {{vm.users.length}}
+            Inscritos:
           </th>
           <th>
-            Regulares: {{vm.relato.regulares}}
+            Regulares:
           </th>
           <th>
-            Irregulares: {{vm.relato.irregulares}}
+            Irregulares:
           </th>
           <th>
-            Ausentes: {{vm.relato.ausentes}}
+            Ausentes:
+          </th>
+        </tr>
+        <tr class="active">
+          <th>
+            {{vm.users.length}}
+          </th>
+          <th>
+            {{vm.relato.regulares}}
+          </th>
+          <th>
+            {{vm.relato.irregulares}}
+          </th>
+          <th>
+            {{vm.relato.ausentes}}
           </th>
         </tr>
         <tr class="info">
