pequena mudança no filtro de lista

--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -93,13 +93,13 @@
           <br>
           <label class="radio-inline">Buscar por </label>
           <label class="radio-inline">
-            <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nome" checked='checked'> Nome do evento
+            <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nada" checked="checked"> Mostrar todos
+          </label>
+          <label class="radio-inline">
+            <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nome"> Nome do evento
           </label>
           <label class="radio-inline">
             <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="data"> Data
-          </label>
-          <label class="radio-inline">
-            <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nada"> Sem filtro
           </label>
         </div>
       </div>
