--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -54,13 +54,13 @@
           <br>
           <label class="radio-inline">Buscar por </label>
           <label class="radio-inline">
-            <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nome" checked='checked'> Nome
+            <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nada" checked="checked"> Mostrar todos
+          </label>
+          <label class="radio-inline">
+            <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nome"> Nome
           </label>
           <label class="radio-inline">
             <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="matricula"> Número da matrícula
-          </label>
-          <label class="radio-inline">
-            <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nada"> Sem filtro
           </label>
         </div>
       </div>
