--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -5,32 +5,33 @@
 
 
 
-<div class="jumbotron text-center" style="font-family:roboto;width:105.9%;transform: translate(-3%, 0%);background-image: url(/assets/logo3.png);">
-  <h1> <kbd> Ponto Dinâmico </kbd></h1>
+<div class="jumbotron text-center" style="width:105.9%;transform: translate(-3%, 0%);background-color:#C0D6DF ">
+  <h1>  Ponto Dinâmico </h1>
 
   
-   <p style="font-family:roboto"> <kbd>Seja bem-vindo ao Ponto Dinâmico </kbd></p> 
+   <p> Seja bem-vindo ao Ponto Dinâmico </p> 
 </div>
 
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
       <div class="list-group" style="position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
-    <li class="list-group-item list-group-item-info"style="font-size:150%;font-family:Ubuntu;color:Black">Cadastros</li>
-    <a href="#!/cadastrarEvento/" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Cadastrar evento</a>
-    <a href="#!/cadastrarUser/" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Cadastrar perfil do usuário</a>
-     <a href="#" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Gerar Qrcode </a>
+    <li class="list-group-item list-group-item-info"style="font-size:150%;color:Black">Cadastros</li>
+    <a href="#!/cadastrarEvento/" class="list-group-item"style="font-size:120%;color:Black">Cadastrar evento</a>
+    <a href="#!/cadastrarUser/" class="list-group-item"style="font-size:120%;color:Black">Cadastrar perfil do usuário</a>
+     <a href="#" class="list-group-item"style="font-size:120%;color:Black">Gerar Qrcode </a>
     </div>
     </div>
     <div class="col-sm-6">
-      <div class="list-group" style="position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
-   <li class="list-group-item list-group-item-info" style="font-size:150%;font-family:Ubuntu;color:Black">Relatórios</li>
-    <a href="#!/listaUser/" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Relatório por usuário</a>
-    <a href="#!/listaEvento/" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Relatório por eventos</a>
+      <div class="list-group" style="position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center; ">
+   <li class="list-group-item list-group-item-info" style="font-size:150%;color:Black">Relatórios</li>
+    <a href="#!/listaUser/" class="list-group-item"style="font-size:120%;color:Black">Relatório por usuário</a>
+    <a href="#!/listaEvento/" class="list-group-item"style="font-size:120%;color:Black">Relatório por eventos</a>
     </div>
     </div>
     
   </div>
 </div>
 </div>
- 
+
+</div>
