redirecionamento em sessao e ajuste em pontos

--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -146,6 +146,10 @@
         </div>
         <div class="modal-body">
 
+          <div ng-show="vm.pontos==null">
+            Sem pontos realizados
+          </div>
+
           <div ng-show="vm.pontos!=null">
             <h2>Pontos: {{vm.usu_nome}}</h2>
             <table class="table" fixed-header table-height="200px">
