Ajuste provisório no footer

--- a/app/assets/javascripts/views/login/login.html
+++ b/app/assets/javascripts/views/login/login.html
@@ -1,7 +1,8 @@
+
 <div class="row">
 	<div class="col-xs-12">
 
-		<div class="container " style="	; width:30%;top:25%; background-color:	#fafafa">
+		<div class="container " style="	 height:90%;width:30%; background-color:	#fafafa">
 
 			<img ng-src="/assets/logotipo-nexti.png" class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
 
@@ -49,3 +50,7 @@
 		</div>
 	</div>
 </div>
+<br>
+<br>
+<br>
+<br>
