--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -20,8 +20,7 @@
   </div>
 </div>
 <div class="container">
-  <h2>Resultado</h2>
-  <p>Informações :</p>
+  <center><h2>Lista de usuários</h2></center>
   <table class="table" fixed-header table-height="100px">
     <thead>
       <tr class="info">
@@ -44,7 +43,7 @@
       </tr>
     </tbody>
   </table>
-  <h2>Relatório:</h2>
+  <center> <h2>Relatório por usuários</h2> </center>
 
   <table class="table" fixed-header table-height="100px">
     <thead>
@@ -69,7 +68,7 @@
     </tbody>
   </table>
 
-  <h2>Pontos:</h2>
+  <center><h2>Pontos</h2> </center>
   <table class="table" fixed-header table-height="100px">
     <thead>
       <tr class="info">
