--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -20,8 +20,8 @@
   </div>
 </div>
 <div class="container" >
-  <h2>Resultado</h2>
-  <p>Informações :</p>
+ <center> <h2>Lista de eventos</h2> </center>
+  
   <table class="table" fixed-header table-height="55px">
     <thead >
       <tr class="info"  >
@@ -46,7 +46,7 @@
       </div>
     </tbody>
   </table>
-  <h2>Detalhes</h2>
+  <center><h2>Pontos dos usuários</h2> </center>
   <table class="table" fixed-header table-height="100px">
     <thead>
       <tr class="info">
@@ -62,6 +62,10 @@
     </tbody>
   </table>
 </div>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
