--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -14,15 +14,15 @@
     <div class="col-sm-6">
       <ul class="list-group" >
         <li class="list-group-item active text-center">Eventos</li>
-        <li class="list-group-item text-center" ><a href="#!/cadastrarEvento/" class="list-group-item"style="color:Black">Cadastrar evento</a></li>
-        <li class="list-group-item text-center"><a href="#!/listaEvento/" class="list-group-item"style="color:Black">Relatório por eventos</a>  </li>
+        <li class="list-group-item text-center" ><a href="#!/cadastrarEvento" class="list-group-item"style="color:Black">Cadastrar evento</a></li>
+        <li class="list-group-item text-center"><a href="#!/listaEvento" class="list-group-item"style="color:Black">Relatório por eventos</a>  </li>
       </ul>
     </div>
     <div class="col-sm-6">
       <ul class="list-group" >
         <li class="list-group-item active text-center">Usuários</li>
-        <li class="list-group-item text-center"><a href="#!/cadastrarUser/" class="list-group-item"style="color:Black">Cadastrar Usuário</a></li>
-        <li class="list-group-item text-center"><a href="#!/listaUser/" class="list-group-item"style="color:Black">Relatório por usuário</a></li>
+        <li class="list-group-item text-center"><a href="#!/cadastrarUser" class="list-group-item"style="color:Black">Cadastrar Usuário</a></li>
+        <li class="list-group-item text-center"><a href="#!/listaUser" class="list-group-item"style="color:Black">Relatório por usuário</a></li>
       </ul>
     </div>
   </div>
