Contraste em telas de cadastros

--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -27,7 +27,7 @@
 </div>
 
 
-<div class="container naoimprimivel" style="position:relative;transform: translate(0%, 5%); width:52%;background-color:#fafafa">
+<div class="container naoimprimivel" style="position:relative;transform: translate(0%, 5%); width:52%;background-color:#eeeeee">
   <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação" style="position:relative;transform: translate(35%, 0%)">
   <center>
     <h2 style="color:black">Cadastre seu evento
