--- a/app/assets/javascripts/views/cadastroUser/cadastroUser.html
+++ b/app/assets/javascripts/views/cadastroUser/cadastroUser.html
@@ -1,4 +1,4 @@
-<div class="container " style="position:relative;transform: translate(-2%, 8%); width:50%; background-color:	#fafafa">
+<div class="container " style="position:relative;transform: translate(-2%, 8%); width:50%; background-color:#eeeeee">
 	<img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação" style="position:relative;transform: translate(40%, 0%)">
 	<div class="form-group form-group-sm">
 		<form name="vm.form">
